Changes in QMPlay2 build 16.04.21:
	- added spherical view for video playback (Ctrl+3; OpenGL only),
	- added Simplified Chinese translation (king Lee),
	- move video filtering to separate thread,
	- added Yadif deinterlacing filter,
	- better frame skipping,
	- replay gain fixes,
	- bugfix,

Changes in QMPlay2 build 16.03.24:
	- XVideo SHM and OpenGL2(Qt >= 5.6) bugfix,
	- Bob deint bugfix for odd video height/2,

Changes in QMPlay2 build 16.03.11:
	- update Russian translation (victorr2007),
	- update ProstoPleer address,

Changes in QMPlay2 build 16.03.08:
	- feature: suspend the computer after playback is finished,
	- fix VA-API driver Intel >= 1.6.2 video filtering,
	- fix slow seeking on some slow network streams,
	- zero-copy demuxing and decoding (if possible),
	- updated Russian translation (victorr2007),
	- 90°/270° video rotation (OpenGL only),
	- visualization and VDPAU/DDraw bugfix,
	- feature: A-B Repeat,
	- OpenGL 2 bugfix,

Changes in QMPlay2 build 16.02.08:
	- play multiple streams in FFmpeg, YouTube can play different audio/video streams together,
	- move ungrouped playlist entry to the end of the playlist when the file already exists,
	- QOpenGLWindow and QOpenGLWidget are used instead of QGLWidget in Qt5 >= 5.6,
	- FFmpeg module can play e.g. v4l2 on Linux/BSD (needs special address),
	- display icons on playlist for AudioCD and Chiptines,
	- updated German translation (Daniel Meiß-Wilhelm),
	- added Spanish translation (Pedro Álamo),
	- VDPAU and DirectDraw overlay fixes,
	- English is now default language,
	- bugfix,

Changes in QMPlay2 build 15.12.25:
	- KF5 Breeze style fixes in full screen,
	- Qt5 <= 5.2 compilation fixes,
	- OpenGL 2 bugfix,

Changes in QMPlay2 build 15.12.06:
	- support for HEVC, VP8 and VP9 decoding in VA-API (depending on FFmpeg version),
	- setting priorities of decoders and A/V outputs is now more convenient,
	- improve QOpenGLWidget performance (Qt5 only, not used by default),