@@ -1,4 +1,5 @@
-Changes in QMPlay2 build 16.04.21:
+Changes in QMPlay2 build 16.04.22:
+	- VDPAU decoder without VDPAU writer is now available (disabled by default),
 	- added spherical view for video playback (Ctrl+3; OpenGL only),
 	- added Simplified Chinese translation (king Lee),
 	- move video filtering to separate thread,
